# novlake

./: .gitignore  README.md  pyproject.toml
novlake/: lake.py
tests/: test_lake.py  test_novlake.py
